[package]
name = "rudeboy-derive"
version = "0.1.0"
authors = ["Caranatar <caranatar@riseup.net>"]
edition = "2018"
license = "MIT"
description = "Derive and attr macros for the rudeboy crate"
homepage = "https://github.com/caranatar/rudeboy-derive"
repository = "https://github.com/caranatar/rudeboy-derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0", features = [ "full" ] }
quote = "1.0"
proc-macro2 = "1.0"

